--- a/public/exercise.html
+++ b/public/exercise.html
@@ -6,13 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+    </style>
+    
   <title>Fitness Tracker</title>
 </head>
-
 <body>
   <nav>
-    <a href="/">Fitness Tracker</a>
+    
     <a href="/stats">Dashboard</a>
   </nav>
   <div class="wrapper">
@@ -82,8 +86,8 @@
   <div id="toast">
     Workout Added Successfully!
   </div>
-  <script src="/api.js"></script>
-  <script src="/exercise.js"></script>
+  <script src="/js/api.js"></script>
+  <script src="/js/exercise.js"></script>
 </body>
 
 </html>
