--- a/public/stats.html
+++ b/public/stats.html
@@ -10,11 +10,15 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+    </style>
+
     <title>Fitness Chart</title>
   </head>
   <nav>
-    <a href="/">Fitness Tracker</a>
+    <a href="/">Home</a>
   </nav>
   <body>
     <div class="container mt">
@@ -37,7 +41,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script src="/api.js"></script>
-    <script src="/stats.js"></script>
+    <script src="/js/api.js"></script>
+    <script src="/js/stats.js"></script>
   </body>
 </html>
